--- a/ui/app/src/main/java/org/activityinfo/ui/client/input/view/FormInput.scss
+++ b/ui/app/src/main/java/org/activityinfo/ui/client/input/view/FormInput.scss
@@ -57,6 +57,9 @@
 .forminput__field__geopoint {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  margin: -0.5rem;
+  width: calc(100% + 1rem);
 }
 
 .forminput__field__required {
